2004-04-25  John Luke  <jluke@cfl.rr.com>
	
	* Gui/Dialogs/WordCountDialog.cs: use ShadowType.in
	* Gui/Pads/ClassScout.cs: implement redraw so its updated

2004-04-25  Pawel Rozanski  <tokugawa@afn.no-ip.org>
	
	* Gui/Dialogs/CommonAboutDialog.cs: fixed my very Polish name.	

2004-04-25  John Luke  <jluke@cfl.rr.com>
	
	* Gui/Dialogs/CommonAboutDialog.cs:
	update contributors and adjust the scroll slightly	

2004-04-24  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs:
	* Services/ParserService/IParserService.cs:
	* Internal/Parser/IParser.cs: add stubbing for IsAsResolver

2004-04-22  Todd Berman  <tberman@sevenl.net>

	* Gui/Components/SdMenu.cs: check for children, if none, hide menu.
	* Gui/Components/SdMenuCheckBox.cs: small change for gtk-sharp from
	future cvs, should work with current cvs though.

2004-04-20  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: Move stuff around so workbench memento
	works.
	* Gui/Workbench/DefaultWorkbench.cs: Same as above.

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: Match new ReflectionLayer api.
	* Services/MonodocService.cs: uncomment GetHelpXml
	* Services/AmbienceService/AmbienceReflectionDecorator.cs: match api.
	* Services/ParserService/AssemblyInformation.cs: match api.
	* Internal/Parser/ReflectionLayer/Reflection*.cs:
	Add the start of documentation integration into the actual IDE.
	Now the docs show up on code completion tooltips, just the summary.
	Potentially we should enable the entire doc for the class/method,
	but I havnt seen how it looks yet, as it will most likely be large
	for some methods/classes.

	**NOTE: To get this documentation integration, you have to rebuild
	your code completion database.

2004-04-17  Todd Berman  <tberman@sevenl.net>

	* Services/Toolbar/ToolbarService.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Workbench/DefaultWorkbench.cs:
	* Gui/Components/SdToolbarCommand.cs: